--- a/pages/3921.html
+++ b/pages/3921.html
@@ -308,12 +308,24 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><strong>Korteweg de Vries equation</strong> is a particular nonlinear wave equation:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e51577b23bb2c712d22822c500b7d575ca1ef0c1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>u</mi> <mi>t</mi></msub><mo>=</mo><mo stretchy='false'>(</mo><mn>3</mn><msup><mi>u</mi> <mn>2</mn></msup><mo>+</mo><msub><mi>u</mi> <mi>xx</mi></msub><msub><mo stretchy='false'>)</mo> <mi>x</mi></msub></mrow><annotation encoding='application/x-tex'>
-u_t = (3u^2 + u_{xx})_x
+    <h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>The <em>Korteweg de Vries equation</em> is a <a class='existingWikiWord' href='/nlab/show/differential+equation'>differential equation</a>, a particular nonlinear variant of a <a class='existingWikiWord' href='/nlab/show/wave+equation'>wave equation</a>:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9d16d55925ecb201ee2d499f780bca0b3355c30e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>u</mi> <mi>t</mi></msub><mo>=</mo><mo stretchy='false'>(</mo><mn>3</mn><msup><mi>u</mi> <mn>2</mn></msup><mo>+</mo><msub><mi>u</mi> <mi>xx</mi></msub><msub><mo stretchy='false'>)</mo> <mi>x</mi></msub></mrow><annotation encoding='application/x-tex'>
+  u_t = (3u^2 + u_{xx})_x
 
 </annotation></semantics></math></div>
-<p>It is one of the main examples in the study of <a class='existingWikiWord' href='/nlab/show/integrable+system'>integrable systems</a>.</p>
+<p>This is one of the main examples in the study of <a class='existingWikiWord' href='/nlab/show/integrable+system'>integrable systems</a>.</p>
+
+<h2 id='related_entries'>Related entries</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Witten+conjecture'>Witten conjecture</a></li>
+</ul>
+
+<h2 id='references'>References</h2>
 
 <ul>
 <li>M. Adler, <em>On a trace functional for formal pseudo differential operators and the symplectic structure of the Korteweg de Vries type equations</em>, Invent. Math. <strong>50</strong> (1978/79), no. 3, 219–248, <a href='http://www.ams.org/mathscinet-getitem?mr=520927'>MR520927</a></li>
@@ -321,17 +333,20 @@ u_t = (3u^2 + u_{xx})_x
 
 <p>
 </p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Created on April 25, 2010 14:45:13 
-  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
-  (193.55.10.104)
+  Revised on December 20, 2017 09:44:24 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (178.24.246.146)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Korteweg+de+Vries+equation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Korteweg+de+Vries+equation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Korteweg+de+Vries+equation/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Korteweg+de+Vries+equation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Korteweg+de+Vries+equation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
