--- a/pages/4689.html
+++ b/pages/4689.html
@@ -1148,7 +1148,7 @@ margin-left: 0em;
 
 <p>Still another suggestion has been that ordinary quantum field theory might be seen to apply to the ordinary configuration space and action functional of general relativity, if only a suitably adapted parameterization of the configuration space is chosen. Notably one observes that <a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian manifold</a>s may be encoded in terms of <a class='existingWikiWord' href='/nlab/show/connection+on+a+bundle'>connections on the tangent bundle</a> – the <a class='existingWikiWord' href='/nlab/show/Levi-Civita+connection'>Levi-Civita connection</a> – this being manifestly analogous to the nature of the fields in <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a>. (See <a class='existingWikiWord' href='/nlab/show/first-order+formulation+of+gravity'>first-order formulation of gravity</a>).</p>
 
-<p>It has been suggested that therefore quantum gravity may have a description in terms of the <a class='existingWikiWord' href='/nlab/show/holonomy'>holonomy</a>-observables of these connections, their <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a> around loops. Research in this direction has therefore become known as <em>loop quantum gravity</em> . However, little progress has been made in understanding the configuration space of smooth connections in terms of loop observables. In most of the LQG-literature instead it is assumed from the outset that it makes sense to pass to <em>generalized connections</em> : while a smooth connection is the same as a smooth <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a>-<a class='existingWikiWord' href='/nlab/show/functor'>functor</a> on the <a class='existingWikiWord' href='/nlab/show/path+groupoid'>path groupoid</a> <math class='maruku-mathml' display='inline' id='mathml_68f05ee09854a251a7fd3cbed1f13aacae521940_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>P</mi></mstyle> <mn>1</mn></msub><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo><mo>→</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>G</mi></mrow><annotation encoding='application/x-tex'>\mathbf{P}_1(X) \to \mathbf{B}G</annotation></semantics></math>, the “generalized connections” in this context are taken to be non-smooth and non-continuous such functors on sub-categories of paths. It is is not clear how this configuration space relates to that of ordinary gravity.</p>
+<p>It has been suggested that therefore quantum gravity may have a description in terms of the <a class='existingWikiWord' href='/nlab/show/holonomy'>holonomy</a>-observables of these connections, their <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a> around loops. Research in this direction has therefore become known as <em>loop quantum gravity</em> . However, little progress has been made in understanding the configuration space of smooth connections in terms of loop observables. In most of the LQG-literature instead it is assumed from the outset that it makes sense to pass to <em>generalized connections</em> : while a smooth connection is the same as a smooth <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a>-<a class='existingWikiWord' href='/nlab/show/functor'>functor</a> on the <a class='existingWikiWord' href='/nlab/show/path+groupoid'>path groupoid</a> <math class='maruku-mathml' display='inline' id='mathml_66c58d44966659fd9a963b9c4370ce654d1484d3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>P</mi></mstyle> <mn>1</mn></msub><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo><mo>→</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>G</mi></mrow><annotation encoding='application/x-tex'>\mathbf{P}_1(X) \to \mathbf{B}G</annotation></semantics></math>, the “generalized connections” in this context are taken to be non-smooth and non-continuous such functors on sub-categories of paths. It is is not clear how this configuration space relates to that of ordinary gravity.</p>
 
 <p>A plethora of further suggestions has developed out of this, which in the literature often still go under the name “LQG”, even though they may abandon the description of configuration spaces of metrics in terms of loop observables. There is for instance the approach of <em>spin foams</em> or <em><span class='newWikiWord'>causal dynamical triangulations<a href='/nlab/new/causal+dynamical+triangulations'>?</a></span></em>, and that of <em><a class='existingWikiWord' href='/nlab/show/causet'>causets</a></em> , to name just a few.</p>
 
@@ -1187,6 +1187,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/weak+gravity+conjecture'>weak gravity conjecture</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Witten+conjecture'>Witten conjecture</a></p>
 </li>
 </ul>
 
@@ -1296,14 +1300,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 20, 2017 14:12:29 
+  Revised on December 20, 2017 09:48:35 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.49.59)
+  (178.24.246.146)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+gravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+gravity/30" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(30 revisions)</span> | <a href="/nlab/show/diff/quantum+gravity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+gravity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+gravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+gravity/31" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(31 revisions)</span> | <a href="/nlab/show/diff/quantum+gravity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+gravity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
