--- a/pages/6321.html
+++ b/pages/6321.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1215,6 +1215,10 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Radovan+Dermisek'>Radovan Dermisek</a>, <em>Quantum Electrodynamics (QED)</em> (<a href='http://www.physics.indiana.edu/~dermisek/QFT_09/qft-II-5-4p.pdf'>pdf</a>, <a class='existingWikiWord' href='/nlab/files/DermisekQED.pdf' title='pdf'>pdf</a>)</p>
 </li>
 
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hitoshi+Murayama'>Hitoshi Murayama</a>, <em>Quantum Electrodynamics</em> (<a href='http://hitoshi.berkeley.edu/221B-S02/QED.pdf'>pdf</a>)</p>
+</li>
+
 <li id='Zeidler'>
 <p><a class='existingWikiWord' href='/nlab/show/Eberhard+Zeidler'>Eberhard Zeidler</a>, <em>Quantum field theory II: Quantum electrodynamics – A bridge between mathematicians and physicists</em>, Springer (2009)</p>
 </li>
@@ -1247,14 +1251,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 18, 2017 09:37:50 
+  Revised on December 20, 2017 13:33:14 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.92.170)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
