--- a/pages/11498.html
+++ b/pages/11498.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -314,30 +314,30 @@ margin-left: 0em;
 
 <h3 id='of_the_modular_group'>Of the modular group</h3>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_3921bec5497f763a1b852023dbec08bea210c0c0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/natural+number'>natural number</a>. Write</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3921bec5497f763a1b852023dbec08bea210c0c0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>p</mi> <mi>n</mi></msub><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><msub><mi>SL</mi> <mn>2</mn></msub><mo stretchy='false'>(</mo><mi>ℤ</mi><mo stretchy='false'>)</mo><mo>→</mo><msub><mi>SL</mi> <mn>2</mn></msub><mo stretchy='false'>(</mo><mi>ℤ</mi><mo stretchy='false'>/</mo><mi>n</mi><mi>ℤ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_6dd401d1e3bd1f664db19e602a738265f32d25a3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/natural+number'>natural number</a>. Write</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_6dd401d1e3bd1f664db19e602a738265f32d25a3_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>p</mi> <mi>n</mi></msub><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><msub><mi>SL</mi> <mn>2</mn></msub><mo stretchy='false'>(</mo><mi>ℤ</mi><mo stretchy='false'>)</mo><mo>→</mo><msub><mi>SL</mi> <mn>2</mn></msub><mo stretchy='false'>(</mo><mi>ℤ</mi><mo stretchy='false'>/</mo><mi>n</mi><mi>ℤ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   p_n \;\colon\; SL_2(\mathbb{Z}) \to SL_2(\mathbb{Z}/n\mathbb{Z})
 
 </annotation></semantics></math></div>
-<p>for the <a class='existingWikiWord' href='/nlab/show/projection'>projection</a> from the <a class='existingWikiWord' href='/nlab/show/special+linear+group'>special linear group</a> induced by the <a class='existingWikiWord' href='/nlab/show/quotient+object'>quotient</a> <a class='existingWikiWord' href='/nlab/show/projection'>projection</a> <math class='maruku-mathml' display='inline' id='mathml_3921bec5497f763a1b852023dbec08bea210c0c0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi><mo>→</mo><mi>ℤ</mi><mo stretchy='false'>/</mo><mi>n</mi><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Z} \to \mathbb{Z}/n\mathbb{Z}</annotation></semantics></math> to the <a class='existingWikiWord' href='/nlab/show/cyclic+group'>cyclic ring</a>.</p>
+<p>for the <a class='existingWikiWord' href='/nlab/show/projection'>projection</a> from the <a class='existingWikiWord' href='/nlab/show/special+linear+group'>special linear group</a> induced by the <a class='existingWikiWord' href='/nlab/show/quotient+object'>quotient</a> <a class='existingWikiWord' href='/nlab/show/projection'>projection</a> <math class='maruku-mathml' display='inline' id='mathml_6dd401d1e3bd1f664db19e602a738265f32d25a3_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi><mo>→</mo><mi>ℤ</mi><mo stretchy='false'>/</mo><mi>n</mi><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Z} \to \mathbb{Z}/n\mathbb{Z}</annotation></semantics></math> to the <a class='existingWikiWord' href='/nlab/show/cyclic+group'>cyclic ring</a>.</p>
 
-<p>The <em>mod-<math class='maruku-mathml' display='inline' id='mathml_3921bec5497f763a1b852023dbec08bea210c0c0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> congruence subgroups</em> of the <a class='existingWikiWord' href='/nlab/show/special+linear+group'>special linear group</a> <math class='maruku-mathml' display='inline' id='mathml_3921bec5497f763a1b852023dbec08bea210c0c0_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>SL</mi> <mn>2</mn></msub><mo stretchy='false'>(</mo><mi>ℤ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SL_2(\mathbb{Z})</annotation></semantics></math> (essentially the <a class='existingWikiWord' href='/nlab/show/Moebius+transformation'>modular group</a>) are the <a class='existingWikiWord' href='/nlab/show/preimage'>preimages</a> under <math class='maruku-mathml' display='inline' id='mathml_3921bec5497f763a1b852023dbec08bea210c0c0_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>p</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>p_n</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroups</a> of <math class='maruku-mathml' display='inline' id='mathml_3921bec5497f763a1b852023dbec08bea210c0c0_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>SL</mi> <mn>2</mn></msub><mo stretchy='false'>(</mo><mi>ℤ</mi><mo stretchy='false'>/</mo><mi>n</mi><mi>ℤ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SL_2(\mathbb{Z}/n\mathbb{Z})</annotation></semantics></math>.</p>
+<p>The <em>mod-<math class='maruku-mathml' display='inline' id='mathml_6dd401d1e3bd1f664db19e602a738265f32d25a3_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> congruence subgroups</em> of the <a class='existingWikiWord' href='/nlab/show/special+linear+group'>special linear group</a> <math class='maruku-mathml' display='inline' id='mathml_6dd401d1e3bd1f664db19e602a738265f32d25a3_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>SL</mi> <mn>2</mn></msub><mo stretchy='false'>(</mo><mi>ℤ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SL_2(\mathbb{Z})</annotation></semantics></math> (essentially the <a class='existingWikiWord' href='/nlab/show/Moebius+transformation'>modular group</a>) are the <a class='existingWikiWord' href='/nlab/show/preimage'>preimages</a> under <math class='maruku-mathml' display='inline' id='mathml_6dd401d1e3bd1f664db19e602a738265f32d25a3_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>p</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>p_n</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroups</a> of <math class='maruku-mathml' display='inline' id='mathml_6dd401d1e3bd1f664db19e602a738265f32d25a3_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>SL</mi> <mn>2</mn></msub><mo stretchy='false'>(</mo><mi>ℤ</mi><mo stretchy='false'>/</mo><mi>n</mi><mi>ℤ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SL_2(\mathbb{Z}/n\mathbb{Z})</annotation></semantics></math>.</p>
 
 <p>Some of these have traditional names and symbols;</p>
 
 <p>The <strong>principal congruence subgroup</strong> is the preimage of the trivial group:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3921bec5497f763a1b852023dbec08bea210c0c0_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo><mo>≔</mo><mi>ker</mi><mo stretchy='false'>(</mo><msub><mi>p</mi> <mi>n</mi></msub><mo stretchy='false'>)</mo><mo>=</mo><msubsup><mi>p</mi> <mi>n</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msubsup><mrow><mo>(</mo><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mn>1</mn></mtd> <mtd><mn>0</mn></mtd></mtr> <mtr><mtd><mn>0</mn></mtd> <mtd><mn>1</mn></mtd></mtr></mtable></mrow><mo>}</mo></mrow><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_6dd401d1e3bd1f664db19e602a738265f32d25a3_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo><mo>≔</mo><mi>ker</mi><mo stretchy='false'>(</mo><msub><mi>p</mi> <mi>n</mi></msub><mo stretchy='false'>)</mo><mo>=</mo><msubsup><mi>p</mi> <mi>n</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msubsup><mrow><mo>(</mo><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mn>1</mn></mtd> <mtd><mn>0</mn></mtd></mtr> <mtr><mtd><mn>0</mn></mtd> <mtd><mn>1</mn></mtd></mtr></mtable></mrow><mo>}</mo></mrow><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \Gamma(n) \coloneqq ker(p_n) = p_n^{-1}\left(\left\{\array{ 1 &amp; 0 \\ 0 &amp; 1}\right\}\right)
   \,.
 
 </annotation></semantics></math></div>
-<p>This is the origin of the term: the elements of <math class='maruku-mathml' display='inline' id='mathml_3921bec5497f763a1b852023dbec08bea210c0c0_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\Gamma(n)</annotation></semantics></math> are <em>congruent <a class='existingWikiWord' href='/nlab/show/modular+arithmetic'>modulo</a> <math class='maruku-mathml' display='inline' id='mathml_3921bec5497f763a1b852023dbec08bea210c0c0_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math></em> to the identity.</p>
+<p>This is the origin of the term: the elements of <math class='maruku-mathml' display='inline' id='mathml_6dd401d1e3bd1f664db19e602a738265f32d25a3_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\Gamma(n)</annotation></semantics></math> are <em>congruent <a class='existingWikiWord' href='/nlab/show/modular+arithmetic'>modulo</a> <math class='maruku-mathml' display='inline' id='mathml_6dd401d1e3bd1f664db19e602a738265f32d25a3_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math></em> to the identity.</p>
 
 <p>The other two congruence subgroups having special symbols are</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3921bec5497f763a1b852023dbec08bea210c0c0_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Γ</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo><mo>≔</mo><msubsup><mi>p</mi> <mi>n</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msubsup><mrow><mo>(</mo><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mo>*</mo></mtd> <mtd><mo>*</mo></mtd></mtr> <mtr><mtd><mn>0</mn></mtd> <mtd><mo>*</mo></mtd></mtr></mtable></mrow><mo>}</mo></mrow><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_6dd401d1e3bd1f664db19e602a738265f32d25a3_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Γ</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo><mo>≔</mo><msubsup><mi>p</mi> <mi>n</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msubsup><mrow><mo>(</mo><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mo>*</mo></mtd> <mtd><mo>*</mo></mtd></mtr> <mtr><mtd><mn>0</mn></mtd> <mtd><mo>*</mo></mtd></mtr></mtable></mrow><mo>}</mo></mrow><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>
   \Gamma_0(n) \coloneqq p_n^{-1}\left(\left\{\array{ \ast &amp; \ast \\ 0 &amp; \ast}\right\}\right)
 
-</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3921bec5497f763a1b852023dbec08bea210c0c0_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Γ</mi> <mn>1</mn></msub><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo><mo>≔</mo><msubsup><mi>p</mi> <mi>n</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msubsup><mrow><mo>(</mo><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mn>1</mn></mtd> <mtd><mo>*</mo></mtd></mtr> <mtr><mtd><mn>0</mn></mtd> <mtd><mo>*</mo></mtd></mtr></mtable></mrow><mo>}</mo></mrow><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>
+</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_6dd401d1e3bd1f664db19e602a738265f32d25a3_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Γ</mi> <mn>1</mn></msub><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo><mo>≔</mo><msubsup><mi>p</mi> <mi>n</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msubsup><mrow><mo>(</mo><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mn>1</mn></mtd> <mtd><mo>*</mo></mtd></mtr> <mtr><mtd><mn>0</mn></mtd> <mtd><mo>*</mo></mtd></mtr></mtable></mrow><mo>}</mo></mrow><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>
   \Gamma_1(n) \coloneqq p_n^{-1}\left(\left\{\array{ 1 &amp; \ast \\ 0 &amp; \ast}\right\}\right)
 
 </annotation></semantics></math></div>
@@ -368,13 +368,13 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
-<li>Wikipediam, <em><a href='https://en.wikipedia.org/wiki/Congruence_subgroup'>Congruence subgroup</a></em></li>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Congruence_subgroup'>Congruence subgroup</a></em></li>
 </ul>
 
 <p>A list of congruence subgroups is provided in</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Sebastian+Pauli'>Sebastian Pauli</a>, <em><a href='http://www.uncg.edu/mat/faculty/pauli/congruence/'>Congruence subgroups of PSL(2,R)</a></em></li>
+<li><a class='existingWikiWord' href='/nlab/show/Sebastian+Pauli'>Sebastian Pauli</a>, <em><a href='http://www.uncg.edu/mat/faculty/pauli/congruence/'>Congruence subgroups of PSL(2,Z)</a></em></li>
 </ul>
 
 <p>
@@ -386,14 +386,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on July 21, 2015 03:13:40 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.69.72.163)
+  Revised on December 20, 2017 14:47:21 
+  by <a class="existingWikiWord" href="/nlab/show/Noam+Zeilberger">Noam Zeilberger</a>
+  (2001:861:3d80:2650:b47b:6726:d21f:ba90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/congruence+subgroup" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/congruence+subgroup/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/congruence+subgroup" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/congruence+subgroup" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/congruence+subgroup" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/congruence+subgroup/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/congruence+subgroup" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/congruence+subgroup" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
