--- a/pages/18853.html
+++ b/pages/18853.html
@@ -902,13 +902,19 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References:</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>Lamb shift</em> is a shift in the energy spectrum of excitations of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> orbits in the <a class='existingWikiWord' href='/nlab/show/hydrogen+atom'>hydrogen atom</a> which is caused by coupling of the electron in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>.</p>
-
-<p>In fact, historically, the observation of the Lamb shift in <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> catalyzed the theoretic develeopment of <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>QED</a> specifically and of <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> generally.</p>
-
-<p><a class='existingWikiWord' href='/nlab/files/LambShift.png' title=''></a></p>
+<p>The <em>Lamb shift</em> is a tiny shift in the <a class='existingWikiWord' href='/nlab/show/energy'>energy</a> spectrum of excitations of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> orbits in the <a class='existingWikiWord' href='/nlab/show/hydrogen+atom'>hydrogen atom</a>.</p>
 
 <p><img src='https://ncatlab.org/nlab/files/LambShift.png' width='400'/></p>
+
+<p>This is a “fine structure” effect not seen by the <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanics</a> of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a>, but resulting from higher order corrections only seen by regadring the electron in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, here in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>.</p>
+
+<p>The Lamb shift may be attributed to a variety of <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> contributions which add corrections to the basic <a class='existingWikiWord' href='/nlab/show/loop+order'>tree level</a> vertex describing the interaction of the electron with the <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, hence called <em>vertex corrections</em>.</p>
+
+<p><a class='existingWikiWord' href='/nlab/files/LambShiftVertexCorrections.png' title=''></a></p>
+
+<p><img src='https://ncatlab.org/nlab/files/LambShiftVertexCorrections.png' width='400'/></p>
+
+<p>In fact, historically, the observation of the Lamb shift in <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> catalyzed the theoretic develeopment of <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a> specifically and of <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> generally.</p>
 
 <h2 id='references'>References:</h2>
 
@@ -938,14 +944,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 20, 2017 13:36:04 
+  Revised on December 20, 2017 14:57:11 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (176.74.57.166)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Lamb+shift" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lamb+shift/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Lamb+shift" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lamb+shift" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Lamb+shift" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lamb+shift/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Lamb+shift" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lamb+shift" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
