--- a/pages/11092.html
+++ b/pages/11092.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,6 +312,22 @@ margin-left: 0em;
 <li><a href='http://en.wikipedia.org/wiki/Andrey_Kolmogorov'>Wikipedia entry</a></li>
 </ul>
 
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_a711ac28fa634847b62b37c89cbeb815d41c8e5a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/probability+theory'>probability theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/random+variable'>random variable</a></p>
+</li>
+</ul>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 
 <p>
@@ -320,14 +336,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May 20, 2016 12:09:37 
-  by <a class="existingWikiWord" href="/nlab/show/Noam+Zeilberger">Noam Zeilberger</a>
-  (193.55.177.48)
+  Revised on December 21, 2017 15:26:50 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Andrey+Kolmogorov" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Andrey+Kolmogorov/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Andrey+Kolmogorov" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Andrey+Kolmogorov" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Andrey+Kolmogorov" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Andrey+Kolmogorov/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Andrey+Kolmogorov" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Andrey+Kolmogorov" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
